# CantinaCF

./: .env.template  .gitignore  Makefile  README.md  TODO.txt  a.txt  config.json  copy_database.py  copy_excel_alunos.py  docker-compose.yml  init-letsencrypt.sh  nginx.conf  query_saldo.sql  query_saldo_devedor.sql  requirements.txt  run_server.py  schema.sql
backend/: .env.template  .gitignore  Dockerfile  config.json  copy_database.py  entrypoint.sh  pyproject.toml  requirements.txt  run_server.py
backend/cantina/: __init__.py  auth.py  database.py  models.py  settings.py  utils.py
backend/cantina/resources/: __init__.py  affiliates.py  api.py  auth.py  cantina.py  dispatch.py  export_query.py  mercado_pago_webhook.py  payment_methods.py  payments.py  payroll.py  product_sales.py  product_sales_stats.py  products_dispatch.py  recharge.py  role.py  stats.py  user.py
backend/cantina/services/: __init__.py  bank.py
backend/cantina/templates/: affiliates-history.html  affiliates.html  cantina.html  edit-product.html  history-edits-products.html  index.html  pay-payroll.html  payments-history.html  profile.html  stock-history.html  users-with-balance.html  users.html
backend/cantina/websockets/: __init__.py  base.py  payments.py  products_dispatch.py
backend/migrations/versions/: 1a859e1b3916_remove_payroll_table_once_its_unused.py  28819ca43a57_add_is_deleted_mixin.py  3ab3a08ab96e_git_pull.py  40f51b528dc0_updates.py  590a4210fa45_add_transaction_data_to_payment.py  6a8afa99938d_updates.py  7b4331353ced_updates_git_pull.py  d8ca4751db15_remove_unused_tables.py  (+3 more)
(+202 files in other folders)
