[tool.poetry]
name = "cantinacf"
version = "0.1.0"
description = ""
authors = ["sr-pato <felipe.adeildo@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "1.11.1"
blinker = "1.6.2"
cachelib = "0.9.0"
click = "8.1.3"
colorama = "0.4.6"
et-xmlfile = "1.1.0"
flask = "2.3.2"
flask-caching = "2.0.2"
flask-migrate = "4.0.4"
flask-sqlalchemy = "3.0.5"
greenlet = "^3.0.3"
itsdangerous = "2.1.2"
jinja2 = "3.1.2"
mako = "1.2.4"
markupsafe = "2.1.3"
numpy = "^1.26.3"
openpyxl = "3.1.2"
pandas = "^2.1.4"
python-dateutil = "2.8.2"
pytz = "2023.3"
six = "1.16.0"
sqlalchemy = "2.0.19"
typing-extensions = "4.7.1"
tzdata = "2023.3"
werkzeug = "2.3.6"
xlsxwriter = "3.1.2"
flask-jwt-extended = "^4.6.0"
flask-restful = "^0.3.10"
flask-cors = "^4.0.0"
eventlet = "^0.35.2"


[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"
ruff = "^0.4.4"
requests = "^2.31.0"
ipython = "^8.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
